[gd_scene format=3 uid="uid://bbdyaukilqsqr"]

[ext_resource type="Script" uid="uid://dis2wtdohujjq" path="res://UI/Main Menu/main_menu.gd" id="1_3g31d"]
[ext_resource type="Script" uid="uid://do47qleu3ylvd" path="res://UI/Main Menu/lobby_menu.gd" id="2_v04x6"]

[node name="MainMenu" type="Control" unique_id=1731227302]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3g31d")

[node name="Connection" type="VBoxContainer" parent="." unique_id=2010914824]
custom_minimum_size = Vector2(171.365, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -43.0
offset_right = 43.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Host" type="Button" parent="Connection" unique_id=165552656]
layout_mode = 2
size_flags_vertical = 8
text = "Host"

[node name="Connect" type="Button" parent="Connection" unique_id=1413944804]
layout_mode = 2
size_flags_vertical = 8
text = "Connect"

[node name="Username" type="LineEdit" parent="Connection" unique_id=24275305]
layout_mode = 2
placeholder_text = "Username"
alignment = 1

[node name="Lobby" type="VBoxContainer" parent="." unique_id=448015125]
visible = false
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -33.5
offset_right = 33.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("2_v04x6")

[node name="Label" type="Label" parent="Lobby" unique_id=295813796]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Players"

[node name="PlayerList" type="VBoxContainer" parent="Lobby" unique_id=1265914267]
layout_mode = 2

[node name="StartGame" type="Button" parent="Lobby" unique_id=1914423849]
layout_mode = 2
text = "Start Game"

[node name="Disconnect" type="Button" parent="Lobby" unique_id=1751645165]
layout_mode = 2
text = "Disconnect"

[connection signal="pressed" from="Connection/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Connection/Connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="Lobby/StartGame" to="Lobby" method="_on_start_game_pressed"]
[connection signal="pressed" from="Lobby/Disconnect" to="Lobby" method="_on_disconnect_pressed"]
